@@ -1,70 +1,5 @@
 <?php 
 
-	global $GROUP_TOOLS_PAGE_HANDLER_BACKUP;
-	$GROUP_TOOLS_PAGE_HANDLER_BACKUP = array();
-
-	function group_tools_extend_page_handler($handler, $function){
-		elgg_deprecated_notice("don't use: register", 1.7);
-		
-		global $GROUP_TOOLS_PAGE_HANDLER_BACKUP;
-		global $CONFIG;
-		
-		$result = false;
-		
-		if(!empty($handler) && !empty($function) && is_callable($function)){
-			if(isset($CONFIG->pagehandler) && array_key_exists($handler, $CONFIG->pagehandler)){
-				// backup original page handler
-				$GROUP_TOOLS_PAGE_HANDLER_BACKUP[$handler] = $CONFIG->pagehandler[$handler];
-				// register new handler
-				register_page_handler($handler, $function);
-				$result = true;
-			} else {
-				register_page_handler($handler, $function);
-				$result = true;
-			}
-		}
-		
-		return $result;
-	}
-	
-	function group_tools_fallback_page_handler($page, $handler){
-		elgg_deprecated_notice("don't use: fallback", 1.7);
-		global $GROUP_TOOLS_PAGE_HANDLER_BACKUP;
-		
-		$result = false;
-		
-		if(!empty($handler)){
-			if(array_key_exists($handler, $GROUP_TOOLS_PAGE_HANDLER_BACKUP)){
-				if(is_callable($GROUP_TOOLS_PAGE_HANDLER_BACKUP[$handler])){
-					$function = $GROUP_TOOLS_PAGE_HANDLER_BACKUP[$handler];
-					
-					$result = $function($page, $handler);
-					
-					if($result !== false){
-						$result = true;
-					}
-				}
-			}
-		}
-		
-		return $result;
-	}
-
-	function group_tools_groups_page_handler($page, $handler){
-		elgg_deprecated_notice("don't use: handler", 1.7);
-		switch($page[0]){
-			case "mail":
-				if(!empty($page[1])){
-					set_input("group_guid", $page[1]);
-					include(dirname(dirname(__FILE__)) . "/pages/mail.php");
-					break;
-				}
-			default:
-				return group_tools_fallback_page_handler($page, $handler);
-				break;
-		}
-	}
-	
 	function group_tools_check_group_email_invitation($invite_code, $group_guid = 0){
 		$result = false;
 		
