@@ -30,5 +30,11 @@
 		<version>4.0</version>
 	</suggests>
 	
+	<suggests>
+		<type>plugin</type>
+		<name>html_email_handler</name>
+		<version>2.0</version>
+	</suggests>
+	
 	<category>ColdTrick</category>
 </plugin_manifest>
