@@ -1,0 +1,22 @@
+<?php ?>
+.ac_results {
+	position: absolute;
+	
+	max-width: 600px;
+	background-color: white;
+	border: 1px solid #ccc;
+	overflow: hidden;
+
+}
+.ac_results ul>li {
+	padding: 1px 4px;
+}
+.ac_results ul>li img {
+	vertical-align: middle;
+}
+.ac_results ul>li.ac_odd {
+	background-color: #eee;
+}
+.ac_results ul>li.ac_over {
+	background-color: #E4ECF5
+}
